@@ -5,7 +5,6 @@ import com.google.api.client.http.HttpStatusCodes;
 import com.google.gson.Gson;
 import com.google.gson.JsonSyntaxException;
 import com.google.inject.Inject;
-import com.networknt.schema.ValidationMessage;
 import io.dropwizard.auth.Auth;
 import jakarta.annotation.security.PermitAll;
 import jakarta.annotation.security.RolesAllowed;
@@ -64,7 +63,6 @@ import org.glassfish.jersey.media.multipart.FormDataBodyPart;
 import org.glassfish.jersey.media.multipart.FormDataMultiPart;
 import org.glassfish.jersey.media.multipart.FormDataParam;
 
-
 @Path("api/dataset")
 public class DatasetResource extends Resource {
 
@@ -78,10 +76,13 @@ public class DatasetResource extends Resource {
   private final GCSService gcsService;
 
   @Inject
-  public DatasetResource(DatasetService datasetService, UserService userService,
+  public DatasetResource(
+      DatasetService datasetService,
+      UserService userService,
       DatasetRegistrationService datasetRegistrationService,
       ElasticSearchService elasticSearchService,
-      TDRService tdrService, GCSService gcsService) {
+      TDRService tdrService,
+      GCSService gcsService) {
     this.datasetService = datasetService;
     this.userService = userService;
     this.datasetRegistrationService = datasetRegistrationService;
@@ -98,34 +99,30 @@ public class DatasetResource extends Resource {
   @RolesAllowed({ADMIN, CHAIRPERSON, DATASUBMITTER})
   @Timed
   /*
-   * This endpoint accepts a json instance of a dataset-registration-schema_v1.json schema.
+   * This endpoint accepts a JSON instance of a dataset-registration-schema_v1.json schema.
    * With that object, we can fully create datasets from the provided values.
    */
   public Response createDatasetRegistration(
-      @Auth AuthUser authUser,
-      FormDataMultiPart multipart,
-      @FormDataParam("dataset") String json) {
+      @Auth AuthUser authUser, FormDataMultiPart multipart, @FormDataParam("dataset") String json) {
     try {
-      Set<ValidationMessage> errors = jsonSchemaUtil.validateSchema_v1(json);
+      Set<String> errors = jsonSchemaUtil.validateSchemaMessagesV1(json);
       if (!errors.isEmpty()) {
         throw new BadRequestException(
-            "Invalid schema:\n"
-                + String.join("\n", errors.stream().map(ValidationMessage::getMessage).toList()));
+            "Please correct the following fields:\n"
+                + errors.stream().map(error -> " - " + error + "\n").collect(Collectors.joining()));
       }
 
-      DatasetRegistrationSchemaV1 registration = jsonSchemaUtil.deserializeDatasetRegistration(
-          json);
+      DatasetRegistrationSchemaV1 registration =
+          jsonSchemaUtil.deserializeDatasetRegistration(json);
       User user = userService.findUserByEmail(authUser.getEmail());
 
       // key: field name (not file name), value: file body part
       Map<String, FormDataBodyPart> files = extractFilesFromMultiPart(multipart);
 
       // Generate datasets from registration
-      List<Dataset> datasets = datasetRegistrationService.createDatasetsFromRegistration(
-          registration,
-          user,
-          files);
-      Integer studyId = datasets.get(0).getStudyId();
+      List<Dataset> datasets =
+          datasetRegistrationService.createDatasetsFromRegistration(registration, user, files);
+      Integer studyId = datasets.getFirst().getStudyId();
       Study study = datasetService.findStudy(studyId);
       DatasetRegistrationSchemaV1Builder builder = new DatasetRegistrationSchemaV1Builder();
       DatasetRegistrationSchemaV1 createdRegistration = builder.build(study, datasets);
@@ -135,8 +132,8 @@ public class DatasetResource extends Resource {
         logException(entityException);
         throw entityException;
       }
-      URI uri = UriBuilder.fromPath(String.format("/api/dataset/study/%s", study.getStudyId()))
-          .build();
+      URI uri =
+          UriBuilder.fromPath(String.format("/api/dataset/study/%s", study.getStudyId())).build();
       String entity = GsonUtil.buildGsonNullSerializer().toJson(createdRegistration);
       return Response.created(uri).entity(entity).build();
     } catch (Exception e) {
@@ -144,9 +141,7 @@ public class DatasetResource extends Resource {
     }
   }
 
-  /**
-   * This endpoint updates the dataset.
-   */
+  /** This endpoint updates the dataset. */
   @PUT
   @Consumes({MediaType.MULTIPART_FORM_DATA})
   @Produces({MediaType.APPLICATION_JSON})
@@ -172,24 +167,22 @@ public class DatasetResource extends Resource {
       // key: field name (not file name), value: file body part
       Map<String, FormDataBodyPart> files = extractFilesFromMultiPart(multipart);
 
-      Dataset updatedDataset = datasetRegistrationService.updateDataset(datasetId, user, update,
-          files);
+      Dataset updatedDataset =
+          datasetRegistrationService.updateDataset(datasetId, user, update, files);
       return Response.ok().entity(updatedDataset).build();
     } catch (Exception e) {
       return createExceptionResponse(e);
     }
   }
 
-  /**
-   * This endpoint updates the dataset.
-   */
+  /** This endpoint updates the dataset. */
   @PATCH
   @Consumes({MediaType.APPLICATION_JSON})
   @Produces({MediaType.APPLICATION_JSON})
   @Path("/{datasetId}")
   @RolesAllowed({ADMIN, CHAIRPERSON, DATASUBMITTER})
-  public Response patchByDatasetUpdate(@Auth DuosUser duosUser,
-      @PathParam("datasetId") Integer datasetId, String json) {
+  public Response patchByDatasetUpdate(
+      @Auth DuosUser duosUser, @PathParam("datasetId") Integer datasetId, String json) {
     try {
       User user = duosUser.getUser();
       Dataset existingDataset = datasetService.findDatasetById(user, datasetId);
@@ -217,7 +210,8 @@ public class DatasetResource extends Resource {
       }
       // Validate DatasetPatch values
       List<String> existingNames = datasetService.findAllDatasetNames();
-      if (patch.name() != null && !patch.name().equals(existingDataset.getName())
+      if (patch.name() != null
+          && !patch.name().equals(existingDataset.getName())
           && existingNames.contains(patch.name())) {
         throw new BadRequestException(
             "The new name for this dataset already exists: " + patch.name());
@@ -226,7 +220,7 @@ public class DatasetResource extends Resource {
         throw new BadRequestException("Properties are invalid");
       }
       Dataset patched = datasetRegistrationService.patchDataset(datasetId, user, patch);
-      elasticSearchService.synchronizeDatasetInESIndex(patched, user, false);
+      elasticSearchService.synchronizeDatasetInESIndex(patched, false);
       return Response.ok(patched).build();
     } catch (Exception e) {
       return createExceptionResponse(e);
@@ -239,7 +233,8 @@ public class DatasetResource extends Resource {
   @Path("/v3")
   public Response findAllDatasetStudySummaries(@Auth DuosUser duosUser) {
     try {
-      List<DatasetStudySummary> summaries = datasetService.findAllDatasetStudySummaries();
+      List<DatasetStudySummary> summaries =
+          datasetService.findAllDatasetStudySummaries(duosUser.getUser());
       return Response.ok(summaries).build();
     } catch (Exception e) {
       return createExceptionResponse(e);
@@ -267,8 +262,8 @@ public class DatasetResource extends Resource {
   @Produces(MediaType.APPLICATION_JSON)
   @PermitAll
   @Timed
-  public Response getRegistrationFromDatasetIdentifier(@Auth DuosUser duosUser,
-      @PathParam("datasetIdentifier") String datasetIdentifier) {
+  public Response getRegistrationFromDatasetIdentifier(
+      @Auth DuosUser duosUser, @PathParam("datasetIdentifier") String datasetIdentifier) {
     try {
       User user = duosUser.getUser();
       Dataset dataset = datasetService.findDatasetByIdentifier(user, datasetIdentifier);
@@ -279,8 +274,8 @@ public class DatasetResource extends Resource {
       if (dataset.getStudy() == null || dataset.getStudy().getStudyId() == null) {
         throw new NotFoundException("No study exists for dataset identifier: " + datasetIdentifier);
       }
-      DatasetRegistrationSchemaV1 registration = new DatasetRegistrationSchemaV1Builder().build(
-          dataset.getStudy(), List.of(dataset));
+      DatasetRegistrationSchemaV1 registration =
+          new DatasetRegistrationSchemaV1Builder().build(dataset.getStudy(), List.of(dataset));
       String entity = GsonUtil.buildGsonNullSerializer().toJson(registration);
       return Response.ok().entity(entity).build();
     } catch (Exception e) {
@@ -292,24 +287,24 @@ public class DatasetResource extends Resource {
   @Path("/batch")
   @Produces("application/json")
   @PermitAll
-  public Response getDatasets(@Auth DuosUser duosUser,
-      @QueryParam("ids") List<Integer> datasetIds) {
+  public Response getDatasets(
+      @Auth DuosUser duosUser, @QueryParam("ids") List<Integer> datasetIds) {
     try {
       List<Dataset> datasets = datasetService.findDatasetsByIds(duosUser.getUser(), datasetIds);
-      Set<Integer> foundIds = datasets.stream().map(Dataset::getDatasetId)
-          .collect(Collectors.toSet());
+      Set<Integer> foundIds =
+          datasets.stream().map(Dataset::getDatasetId).collect(Collectors.toSet());
       if (!foundIds.containsAll(datasetIds)) {
         // find the differences
-        List<Integer> differences = new ArrayList<>(datasetIds)
-            .stream()
-            .filter(Objects::nonNull)
-            .filter(Predicate.not(foundIds::contains))
-            .toList();
+        List<Integer> differences =
+            new ArrayList<>(datasetIds)
+                .stream()
+                    .filter(Objects::nonNull)
+                    .filter(Predicate.not(foundIds::contains))
+                    .toList();
         throw new NotFoundException(
             "Could not find datasets with ids: "
-                + String.join(",",
-                differences.stream().map(Object::toString).collect(Collectors.toSet())));
-
+                + String.join(
+                    ",", differences.stream().map(Object::toString).collect(Collectors.toSet())));
       }
       return Response.ok(datasets).build();
     } catch (Exception e) {
@@ -394,9 +389,8 @@ public class DatasetResource extends Resource {
   @RolesAllowed(ADMIN)
   public Response indexDatasets(@Auth AuthUser authUser) {
     try {
-      User user = userService.findUserByEmail(authUser.getEmail());
       var datasetIds = datasetService.findAllDatasetIds();
-      StreamingOutput indexResponse = elasticSearchService.indexDatasetIds(datasetIds, user);
+      StreamingOutput indexResponse = elasticSearchService.indexDatasetIds(datasetIds);
       return Response.ok(indexResponse, MediaType.APPLICATION_JSON).build();
     } catch (Exception e) {
       return createExceptionResponse(e);
@@ -408,8 +402,7 @@ public class DatasetResource extends Resource {
   @RolesAllowed(ADMIN)
   public Response indexDataset(@Auth AuthUser authUser, @PathParam("datasetId") Integer datasetId) {
     try {
-      User user = userService.findUserByEmail(authUser.getEmail());
-      return elasticSearchService.indexDataset(datasetId, user);
+      return elasticSearchService.indexDataset(datasetId);
     } catch (Exception e) {
       return createExceptionResponse(e);
     }
@@ -418,8 +411,8 @@ public class DatasetResource extends Resource {
   @DELETE
   @Path("/index/{datasetId}")
   @RolesAllowed(ADMIN)
-  public Response deleteDatasetIndex(@Auth AuthUser authUser,
-      @PathParam("datasetId") Integer datasetId) {
+  public Response deleteDatasetIndex(
+      @Auth AuthUser authUser, @PathParam("datasetId") Integer datasetId) {
     try {
       User user = userService.findUserByEmail(authUser.getEmail());
       return elasticSearchService.deleteIndex(datasetId, user.getUserId());
@@ -442,12 +435,28 @@ public class DatasetResource extends Resource {
     }
   }
 
+  @POST
+  @Path("/search/index/v2")
+  @Consumes("application/json")
+  @Produces("application/json")
+  @PermitAll
+  @Timed
+  public Response searchDatasetIndexStream(@Auth DuosUser duosUser, String query) {
+    try {
+      InputStream inputStream = elasticSearchService.searchDatasetsStream(query);
+      StreamingOutput stream = createStreamingOutput(inputStream);
+      return Response.ok(stream).build();
+    } catch (Exception e) {
+      return createExceptionResponse(e);
+    }
+  }
+
   @PUT
   @Produces("application/json")
   @RolesAllowed(ADMIN)
   @Path("/{id}/datause")
-  public Response updateDatasetDataUse(@Auth AuthUser authUser, @PathParam("id") Integer id,
-      String dataUseJson) {
+  public Response updateDatasetDataUse(
+      @Auth AuthUser authUser, @PathParam("id") Integer id, String dataUseJson) {
     try {
       User user = userService.findUserByEmail(authUser.getEmail());
       Gson gson = new Gson();
@@ -498,10 +507,11 @@ public class DatasetResource extends Resource {
         throw new NotFoundException();
       }
     }
-    List<Integer> dacIds = user.getRoles().stream()
-        .filter(r -> r.getRoleId().equals(UserRoles.CHAIRPERSON.getRoleId()))
-        .map(UserRole::getDacId)
-        .toList();
+    List<Integer> dacIds =
+        user.getRoles().stream()
+            .filter(r -> r.getRoleId().equals(UserRoles.CHAIRPERSON.getRoleId()))
+            .map(UserRole::getDacId)
+            .toList();
     if (dacIds.isEmpty()) {
       // Something went very wrong here. A chairperson with no dac ids is an error
       logWarn("Unable to find dac ids for chairperson user: " + user.getEmail());
@@ -523,10 +533,10 @@ public class DatasetResource extends Resource {
   @RolesAllowed(ADMIN)
   @Path("/{id}/authorizedAccessReaders")
   public Response getAuthorizedReaders(@Auth DuosUser duosUser, @PathParam("id") Long id) {
-    try{
+    try {
       return Response.ok(datasetService.getAuthorizationReaders(id)).build();
     } catch (Exception e) {
-     return createExceptionResponse(e);
+      return createExceptionResponse(e);
     }
   }
 
@@ -535,9 +545,7 @@ public class DatasetResource extends Resource {
   @RolesAllowed(ADMIN)
   @Path("/{id}/authorizedAccessReaders/{userId}")
   public Response addAuthorizedReaders(
-      @Auth DuosUser duosUser,
-      @PathParam("id") long datasetId,
-      @PathParam("userId") int userId) {
+      @Auth DuosUser duosUser, @PathParam("id") long datasetId, @PathParam("userId") int userId) {
     try {
       User targetUser = userService.findUserById(userId);
       if (targetUser == null || !targetUser.hasUserRole(UserRoles.RESEARCHER)) {
@@ -549,7 +557,6 @@ public class DatasetResource extends Resource {
     } catch (Exception e) {
       return createExceptionResponse(e);
     }
-
   }
 
   @DELETE
@@ -557,9 +564,7 @@ public class DatasetResource extends Resource {
   @RolesAllowed(ADMIN)
   @Path("/{id}/authorizedAccessReaders/{userId}")
   public Response removeAuthorizedReaders(
-      @Auth DuosUser duosUser,
-      @PathParam("id") long datasetId,
-      @PathParam("userId") long userId) {
+      @Auth DuosUser duosUser, @PathParam("id") long datasetId, @PathParam("userId") long userId) {
     try {
       datasetService.removeAuthorizedAccessReader(datasetId, userId);
       return Response.ok().build();
@@ -572,13 +577,17 @@ public class DatasetResource extends Resource {
   @Produces("application/json")
   @RolesAllowed(RESEARCHER)
   @Path("/{identifier}/approvedUsers")
-  public Response getApprovedUsers(@Auth DuosUser duosUser, @PathParam("identifier") String datasetIdentifier) {
+  public Response getApprovedUsers(
+      @Auth DuosUser duosUser, @PathParam("identifier") String datasetIdentifier) {
     try {
-      Dataset dataset = datasetService.findMinimalDatasetByIdentifier(duosUser.getUser(), datasetIdentifier, false);
+      Dataset dataset =
+          datasetService.findMinimalDatasetByIdentifier(
+              duosUser.getUser(), datasetIdentifier, false);
       if (Objects.isNull(dataset)) {
         return Response.status(Response.Status.NOT_FOUND).build();
       }
-      if (!datasetService.isAuthorizedToListUsers(dataset.getDatasetId(), duosUser.getUser().getUserId())) {
+      if (!datasetService.isAuthorizedToListUsers(
+          dataset.getDatasetId(), duosUser.getUser().getUserId())) {
         return Response.status(Response.Status.FORBIDDEN).build();
       }
       return Response.ok(tdrService.getApprovedUsersForDataset(duosUser, dataset)).build();
@@ -591,7 +600,8 @@ public class DatasetResource extends Resource {
   @Produces(MediaType.APPLICATION_OCTET_STREAM)
   @Path("/{id}/nihInstitutionalCertification")
   @RolesAllowed({ADMIN, DATASUBMITTER, CHAIRPERSON, MEMBER})
-  public Response getNihInstitutionalCertification(@Auth DuosUser duosUser, @PathParam("id") Integer id) {
+  public Response getNihInstitutionalCertification(
+      @Auth DuosUser duosUser, @PathParam("id") Integer id) {
     try {
       User requestingUser = duosUser.getUser();
       Dataset dataset = datasetService.findDatasetById(requestingUser, id);
@@ -599,19 +609,22 @@ public class DatasetResource extends Resource {
         return Response.status(Response.Status.NOT_FOUND).build();
       }
       FileStorageObject nihFile = dataset.getNihInstitutionalCertificationFile();
-      if (nihFile != null &&
-          !nihFile.getDeleted() &&
-          nihFile.getFileName() != null &&
-          nihFile.getBlobId() != null &&
-          (requestingUser.hasUserRole(UserRoles.ADMIN)
+      if (nihFile != null
+          && !nihFile.getDeleted()
+          && nihFile.getFileName() != null
+          && nihFile.getBlobId() != null
+          && (requestingUser.hasUserRole(UserRoles.ADMIN)
               || dataset.isCreator(requestingUser)
               || dataset.isCustodian(requestingUser)
               || requestingUser.verifyDACRole(CHAIRPERSON, dataset.getDacId())
               || requestingUser.verifyDACRole(MEMBER, dataset.getDacId()))) {
         InputStream fileStream = gcsService.getDocument(nihFile.getBlobId());
         StreamingOutput streamOutput = createStreamingOutput(fileStream);
-        return Response.ok(streamOutput).header(HttpHeaders.CONTENT_DISPOSITION,
-            String.format("attachment; filename=\"%s\"", nihFile.getFileName())).build();
+        return Response.ok(streamOutput)
+            .header(
+                HttpHeaders.CONTENT_DISPOSITION,
+                String.format("attachment; filename=\"%s\"", nihFile.getFileName()))
+            .build();
       } else {
         return Response.status(Status.NOT_FOUND).build();
       }
@@ -619,5 +632,15 @@ public class DatasetResource extends Resource {
       logWarn(e.getMessage());
       return Response.status(Response.Status.INTERNAL_SERVER_ERROR).build();
     }
+  }
+
+  @PUT
+  @Produces(MediaType.APPLICATION_OCTET_STREAM)
+  @Path("/cleanupEmptyCertificationAndAlternativeSharingFiles")
+  @RolesAllowed({ADMIN})
+  public Response cleanupEmptyFiles(@Auth DuosUser duosUser) {
+    User user = duosUser.getUser();
+    datasetRegistrationService.asyncCleanupDatasetsAndStudiesWithEmptyFiles(user);
+    return Response.status(Status.OK).build();
   }
 }
